--- a/public/add-customer/add-customer.html
+++ b/public/add-customer/add-customer.html
@@ -1,7 +1,7 @@
 <div class="AddCustomer">
-	<input type="text" placeholder="Name" ng-model="name"/>
-	<select ng-options="product.name for product in products" ng-model="product">
+	<input type="text" placeholder="Name" ng-model="name" required/>
+	<select ng-options="product.name for product in products" ng-model="product" required>
 		<option value="">Choose Product</option>
 	</select>
-	<button ng-click="add()">Add</button>
+	<button ng-click="addCustomer()" ng-disable="AddCustomer.$invalid">Add</button>
 </div>
