--- a/public/customer/customer.html
+++ b/public/customer/customer.html
@@ -2,5 +2,6 @@
 	<span>{{ customer.name }}</span>
 	<span>{{ customer.product.name }}</span>
 	<span>{{ customer.queuedTime }}</span>
-	<button ng-click="remove()">Remove</button>
+	<button ng-click="serve()" ng-show="!bServed" ng-model="bServed">Serve</button>
+	<button ng-click="remove()" ng-show="!bServed" ng-model="bServed">Remove</button>
 </div>
