--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 		<script src="/QueueApp.js"></script>
 		<script src="/add-customer/AddCustomer.js"></script>
 		<script src="/customer/Customer.js"></script>
+		<script src="/api/CustomerService.js"></script>
 	</head>
 	<body ng-app="qudini.QueueApp" ng-controller="QueueController">
 
@@ -23,7 +24,7 @@
 		<h2>Served customers</h2>
 		<ul>
 			<li ng-repeat="customer in customersServed">
-				<customer customer="customer" on-served="onCustomerServed()" on-removed="onCustomerRemoved()"></customer>
+				<customer customer="customer"></customer>
 			</li>
 		</ul>
 
