Fixed queue time by moving computation to server since REST API does not provide a way to do this. Also added table entry in page.

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
 		    <td class="header">Name</td>
 		    <td class="header">Product</bold></td>
 		    <td class="header">Joined Time</td>
+		    <td class="header">Queue Time(seconds)</td>
 		  </tr>
 		  <tr ng-repeat="customer in customersServed">
 		    <td>{{ $index + 1 }}</td>
